apps/monitoring/thanos/thanos-ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thanos-query-frontend-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth-monitoring
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/hostname: thanos-query.homek8s.cloud
    external-dns.alpha.kubernetes.io/target: b4370153-d4e8-40b9-a248-e5a0b8cb2800.cfargotunnel.com
spec:
  ingressClassName: nginx
  rules:
  - host: thanos-query.homek8s.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-thanos-query-frontend
            port:
              number: 9090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thanos-bucket-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth-monitoring
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
spec:
  ingressClassName: nginx
  rules:
  - host: thanos-bucket.homek8s.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-thanos-bucketweb
            port:
              number: 8080
